[project]
name = "job-orchestration"
version = "0.6.1-dev"
description = "Scheduler and worker cluster for CLP's distributed architecture."
authors = [{name = "YScope Inc.", email = "dev@yscope.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Brotli>=1.1.0",
    "celery[redis]>=5.5.3",
    # mariadb version must be compatible with libmariadev installed in runtime env.
    # See https://mariadb.com/docs/server/connect/programming-languages/python/install/#Dependencies
    "mariadb>=1.0.11,<1.1.dev0",
    "msgpack>=1.1.2",
    "mysql-connector-python>=9.4.0",
    "pika>=1.3.2",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "PyYAML>=6.0.3",
    "yscope-spider-py==0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
clp = [
    "clp-py-utils",
    "job-orchestration",
]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

[tool.mypy]
strict = true

# Additional output
pretty = true
show_error_code_links = true
show_error_context = true
show_error_end = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Allow using Any type for function signatures
    "COM812",  # Redundant and conflicts with ruff format
    "D203",  # No blank line before docstrings (D211)
    "D205",  # Breaks if summary is larger than one line due to wrapping or if no summary exists
    "D212",  # Enforce docstring summary line on the next line after quotes (D213)
    "D400",  # First line of docstrings may not end in period
    "D401",  # Docstrings should be written in present tense (not imperative)
    "D415",  # First line of docstrings may not end in a period, question mark, or exclamation point
    "FBT",  # Allow bool positional parameters since other value positions are allowed
    "FIX002",  # Allow todo statements
    "PERF401",  # Allow for loops when creating lists
    "PERF403",  # Allow for loops when creating dicts
    "S311",  # Allow usage of `random` package
    "S603", # Automatically trust inputs of subprocess execution
    "SIM102",  # Allow collapsible if statements for readability
    "SIM300", # Skip Yoda-condition format fixes
    "TD002",  # Author unnecessary for todo statement
    "TD003",  # Issue link unnecessary for todo statement
    "UP015",  # Explicit open modes are helpful
]
isort.order-by-type = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # Allow usage of pytest `assert`
    "TC003",  # Ignore performance overhead of imports only used for type checking
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.uv]
default-groups = ["clp", "dev"]

[tool.uv.sources]
clp-py-utils = { path = "../clp-py-utils" }
clp-package-utils = { path = "../clp-package-utils" }
