[project]
name = "job-orchestration"
version = "0.6.1-dev"
description = "Scheduler and worker cluster for CLP's distributed architecture."
authors = [{name = "YScope Inc.", email = "dev@yscope.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Brotli>=1.1.0",
    "celery[redis]>=5.5.3",
    # mariadb version must be compatible with libmariadev installed in runtime env.
    # See https://mariadb.com/docs/server/connect/programming-languages/python/install/#Dependencies
    "mariadb>=1.0.11,<1.1.dev0",
    "msgpack>=1.1.2",
    "mysql-connector-python>=9.4.0",
    "pika>=1.3.2",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "PyYAML>=6.0.3",
    "yscope-spider-py==0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
clp = [
    "clp-package-utils",
    "clp-py-utils",
]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

[tool.mypy]
strict = true

# Additional output
pretty = true
show_error_code_links = true
show_error_context = true
show_error_end = true

[tool.ruff]
extend = "../../tools/yscope-dev-utils/exports/lint-configs/python/ruff.toml"

[tool.uv]
default-groups = ["clp", "dev"]

[tool.uv.sources]
clp-py-utils = { path = "../clp-py-utils" }
clp-package-utils = { path = "../clp-package-utils" }
