[package]
name = "log-ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-sdk-s3 = "1.110.0"
aws-sdk-sqs = "1.89.0"
clp-rust-utils = { path = "../clp-rust-utils" }
secrecy = { version = "0.10.3", features = ["serde"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.17"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
stdext = "0.3.3"
