[package]
name = "log-ingestor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json"] }
async-trait = "0.1.89"
aws-sdk-s3 = "1.110.0"
aws-sdk-sqs = "1.89.0"
clap = { version = "4.5.51", features = ["derive"] }
clp-rust-utils = { path = "../clp-rust-utils" }
const_format = "0.2.35"
non-empty-string = { version = "0.2.6", features = ["serde"] }
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.17"
tracing = "0.1.41"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter", "fmt", "std"] }
uuid = { version = "1.18.1", features = ["v4"] }
thiserror = "2.0.17"
log = "0.4.29"

[dev-dependencies]
serial_test = "3.2.0"
