[project]
requires-python = ">= 3.9, <4.0"

[tool.poetry]
name = "spider-orchestration"
version = "0.5.1-dev"
description = "Scheduler and worker cluster for CLP's distributed architecture."
authors = ["YScope Inc. <dev@yscope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9, <4.0"
Brotli = "^1.1.0"
# mariadb version must be compatible with libmariadev installed in runtime env.
# See https://mariadb.com/docs/server/connect/programming-languages/python/install/#Dependencies
mariadb = "~1.0.11"
msgpack = "^1.0.7"
pika = "^1.3.2"
pydantic = "^1.10.13"
pymongo = "^4.7.2"
PyYAML = "^6.0.1"
yscope-spider-py = "~0.0.1-beta.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"