[project]
requires-python = ">= 3.9, <4.0"

[tool.poetry]
name = "spider-orchestration"
version = "0.5.1-dev"
description = "Scheduler and worker cluster for CLP's distributed architecture."
authors = ["YScope Inc. <dev@yscope.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.9, <4.0"
Brotli = "^1.1.0"
# MariaDB version must be compatible with libmariadb-dev <3.3.1 installed in the runtime
# environment. The default version of libmariadb-dev in Ubuntu 22.04 is 3.2.6.
# See https://mariadb.com/docs/connectors/mariadb-connector-python/install#build-prerequisites
mariadb = "~1.0.11"
msgpack = "^1.0.7"
pika = "^1.3.2"
pydantic = "^1.10.13"
pymongo = "^4.7.2"
PyYAML = "^6.0.1"
yscope-spider-py = "~0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"