[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "clp-core"
version = "0.7.1-beta.0"
license = { text = "Apache License 2.0" }
description = "CLP core Python Distribution"
authors = [{name = "YScope Inc.", email = "dev@yscope.com"}]
readme = "README.md"
requires-python = ">=3"

[project.scripts]
"clp-s" = "clp_core:clp_s"

[project.urls]
"Homepage" = "https://github.com/y-scope/clp"
"Issue Tracker" = "https://github.com/y-scope/clp/issues"

[tool.scikit-build]
wheel.packages = ["clp_core"]
wheel.py-api = "py3"
cmake.version = ">=3.31.0"
ninja.version = ">=1.10.0"
cmake.verbose = true
logging.level = "DEBUG"
